tolk-tester/tests/invalid-declaration/err-1163.tolk
const addr_no_wc = address("527964d55cfa6eb731f4bfc07e9d025098097ef8505519e853986279bd8400d8")

/**
@compilation_should_fail
@stderr invalid standard address
 */
